--- a/Project3.vcxproj.filters
+++ b/Project3.vcxproj.filters
@@ -15,15 +15,27 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ListingLineObject.cpp">
+    <ClCompile Include="Linker_Editor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Linker_Editor.cpp">
+    <ClCompile Include="ListingFileClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ListingLineClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StringHexFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ListingLineObject.h">
+    <ClInclude Include="ListingFileClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ListingLineClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StringHexFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
