Ctrl Sect Length Calculated
ListingFile constructor now computes control section length. Added some helper functions such as IsEmptyString and ConvertDecStringToNumber.

--- a/Project3.vcxproj
+++ b/Project3.vcxproj
@@ -141,12 +141,12 @@
     <ClCompile Include="Linker_Editor.cpp" />
     <ClCompile Include="ListingFileClass.cpp" />
     <ClCompile Include="ListingLineClass.cpp" />
-    <ClCompile Include="StringHexFunctions.cpp" />
+    <ClCompile Include="NumericalStringFunctions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ListingFileClass.h" />
     <ClInclude Include="ListingLineClass.h" />
-    <ClInclude Include="StringHexFunctions.h" />
+    <ClInclude Include="NumericalStringFunctions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
