--- a/Project3.vcxproj.filters
+++ b/Project3.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="ListingLineClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="StringHexFunctions.cpp">
+    <ClCompile Include="NumericalStringFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,7 +35,7 @@
     <ClInclude Include="ListingLineClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="StringHexFunctions.h">
+    <ClInclude Include="NumericalStringFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
