--- a/Project3.vcxproj.filters
+++ b/Project3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="NumericalStringFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SymbolTab.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ListingFileClass.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="NumericalStringFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SymbolTab.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
