--- a/Project3.vcxproj.filters
+++ b/Project3.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="SymbolTab.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ListingProgramClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ListingFileClass.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SymbolTab.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ListingProgramClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
