--- a/Project3.vcxproj.filters
+++ b/Project3.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="ListingProgramClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SimpleExpressionEvaluator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ListingFileClass.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ListingProgramClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SimpleExpressionEvaluator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
